<resources>
    <string name="app_name">计算器</string>
    <string name="c">C</string>
    <string name="mul">×</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="del">T</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="vary">[]</string>
    <string name="mod">%</string>
    <string name="pow">xⁿ</string>
    <string name="deg">deg</string>
    <string name="sqrt">√</string>
    <string name="pi">π</string>
    <string name="euler">e</string>
    <string name="square">x²</string>
    <string name="cube">x³</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="cot">cot</string>
    <string name="arcsin">arcsin</string>
    <string name="arccos">arccos</string>
    <string name="arctan">arctan</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="slide_up">Slide up</string>
    <string name="slide">Slide</string>
    <string name="slide_down">Slide down</string>
    <string name="random_color">Random color</string>
    <string name="use_blur">Use blur</string>
    <string name="items_clickables">Items clickables</string>
    <string name="auto_dismiss">Auto dismiss</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="blur_downscale">Blur Downscale</string>

</resources>
